--- a/packages/tasit-sdk/package.json
+++ b/packages/tasit-sdk/package.json
@@ -33,9 +33,11 @@
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
     "chai": "^4.2.0",
+    "ethers": "^4.0.21",
     "mocha": "^5.2.0"
   }
 }
